# ezrc

./: .gitignore  CMakeLists.txt  CMakePresets.json  ChangeLog.md  LICENSE.txt  Makefile  Makefile.am  README.md  README.txt  configure.ac  ezrc.cpp  ezrc.project  ezrc.sln  ezrc.workspace  test.cpp  vcpkg.json
.github/workflows/: cmake.yml  msbuild.yml
ezrc/: ezrc.vcxproj  main.cpp
ezrc-test/: ezrc-test.vcxproj  ezrc-test.vcxproj.filters  main.cpp  math.glsl  resources.cpp  resources.h  resources.yml
src/: Makefile.am  main.cpp
