##
## ezrc - eazy resource compiler
## Copyright (c) 2009, Sean Farrell
## 
## This file is part of ezrc.
## 
## ezrc is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
## 
## ezrc is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with ezrc.  If not, see <http://www.gnu.org/licenses/>.
## 

SUBDIRS = src

EXTRA_DIST = README.txt COPYING.txt
