dnl
dnl qglrc - libqgl's resource compiler
dnl Copyright (c) 2009, Sean Farrell
dnl 
dnl This file is part of qglrc.
dnl 
dnl qglrc is free software: you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation, either version 3 of the License, or
dnl (at your option) any later version.
dnl 
dnl qglrc is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with qglrc.  If not, see <http:dnlwww.gnu.org/licenses/>.
dnl 

AC_INIT([qglrc], [0.1.0], [bugs@libqgl.org])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CXX
AC_PROG_MAKE_SET

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT
