dnl
dnl ezrc - eazy resource compiler
dnl Copyright (c) 2009, Sean Farrell
dnl 
dnl This file is part of ezrc.
dnl 
dnl ezrc is free software: you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation, either version 3 of the License, or
dnl (at your option) any later version.
dnl 
dnl ezrc is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with ezrc.  If not, see <http:dnlwww.gnu.org/licenses/>.
dnl 

AC_INIT([ezrc], [r1], [sean.farrell@rioki.org])
AM_INIT_AUTOMAKE([foreign])

AC_PROG_CXX
AC_PROG_MAKE_SET

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT
